--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,3 @@
-cffi==1.15.1
-click==8.1.3
-cryptography==40.0.2
-pycparser==2.21
+cryptography>=40.0.2
 pyperclip==1.8.2
-PyQt5==5.15.9
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.12.1
+PyQt5
